--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 /* /* /* /* /* /* /* /* /* /* /* /* /* /* /* */
-/* Hero Section Styling Starts */
+/* /* /* Hero Section Styling Starts 
 /* /* /* /* /* /* /* /* /* /* /* /* /* /* /* */
 
 .main {
@@ -170,12 +170,14 @@ li:hover {
   line-height: 29px;
   font-size: 19px;
   padding-bottom: 40px;
+  color: #377062;
 }
 
 .heading-project {
   font-size: 33px;
   font-family: "Fraunces", sans-serif;
   padding-bottom: 12px;
+  color: #2c695a;
 }
 
 /* Project Section Styling Ends */
